fixed profile layout issue

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,8 @@ img {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  gap: 20px;
+
   margin: 30px 0;
 }
 
@@ -114,7 +116,7 @@ h1 {
 }
 
 .profile-stats {
-  margin: 20px 0;
+  margin: 25px 0;
 }
 
 .profile-stats ul {
@@ -122,6 +124,7 @@ h1 {
   justify-content: space-evenly;
   list-style: none;
   font-size: 1em;
+  padding: 0;
 }
 
 span {
